# CEP-BA-Bench

./: .gitignore  LICENSE  README.md
ba_v2/: CMakeLists.txt
ba_v2/include/: BAExporter_v2.h  CameraFrameParameterizations.h  IBA_v2.h  PBAImp_v2.h
ba_v2/src/: BAExporter_v2.cpp  IBA_v2.cpp  PBAImp_v2.cpp
docs/: benchmark_protocol.md  implementation_validation.md
example_v2/: CMakeLists.txt  example.cpp
tools/: analyze_initial_value_benchmark.py  analyze_parallaxba_ijrr_reproduction.py  analyze_public_release_lt100_benchmark.py  analyze_synthetic_benchmark.py  extract_pvl_ba_packages.ps1  generate_parallaxba_ijrr_reproduction.py  generate_synthetic_benchmark.py  plot_benchmark_results.py  run_full_pvl_unified.ps1  run_selected_synthetic_diagnostics.py
